--- a/src/assets/scss/argon-dashboard/_variables.scss
+++ b/src/assets/scss/argon-dashboard/_variables.scss
@@ -55,7 +55,7 @@ $colors: (
 $primary: #5e72e4 !default;
 $secondary: #8392ab !default;
 $info: #11cdef !default;
-$success: #2dce89 !default;
+$success: #332c69 !default;
 $warning: #fb6340 !default;
 $danger: #f5365c !default;
 $light: $gray-200 !default;
@@ -85,8 +85,8 @@ $secondary-gradient-state: #a8b8d8 !default;
 $info-gradient: #1171ef !default;
 $info-gradient-state: #11cdef !default;
 
-$success-gradient: #2dce89 !default;
-$success-gradient-state: #2dcecc !default;
+$success-gradient: #df248c !default;
+$success-gradient-state: #332c69 !default;
 
 $danger-gradient: #f5365c !default;
 $danger-gradient-state: #f56036 !default;
@@ -538,7 +538,8 @@ $font-weight-lighter: lighter !default;
 $font-weight-light: 300 !default;
 $font-weight-normal: 400 !default;
 $font-weight-bold: 600 !default;
-$font-weight-bolder: 700 !default;
+$font-weight-bolder: 900 !default;
+
 
 $font-weight-base: $font-weight-normal !default;
 
