--- a/src/assets/scss/argon-dashboard/variables/_misc.scss
+++ b/src/assets/scss/argon-dashboard/variables/_misc.scss
@@ -98,4 +98,4 @@ $hr-vertical-bg-image-dark: linear-gradient(
 $separator-height: 150px !default;
 $separator-transform: translateZ(0) !default;
 
-$argon-default-color: #172b4d !default;
+$argon-default-color: #47436b !default;
