--- a/src/assets/scss/argon-dashboard/variables/_dark-version.scss
+++ b/src/assets/scss/argon-dashboard/variables/_dark-version.scss
@@ -1,7 +1,7 @@
 $dark-version-body-color: rgba(255, 255, 255, 0.8) !default;
-$dark-version-bg-color: #051139 !default;
-$dark-version-sidenav-bg-color: #111c44 !default;
-$dark-version-card-bg-color: #111c44 !default;
+$dark-version-bg-color: #1f1f1f !default;
+$dark-version-sidenav-bg-color: #272727 !default;
+$dark-version-card-bg-color: #333333 !default;
 $dark-version-card-box-shadow:
   0 2px 2px 0 rgba(0, 0, 0, 0.14),
   0 3px 1px -2px rgba(0, 0, 0, 0.2),
